Fix spacing for multiple screens

--- a/css/laptop.css
+++ b/css/laptop.css
@@ -2,6 +2,6 @@ main {
     width: 40%;
     text-align: center;
     margin: 0 auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
