--- a/css/mobile.css
+++ b/css/mobile.css
@@ -20,15 +20,15 @@ main {
     width: 90%;
     text-align: center;
     margin: 0 auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 h1 {
     margin-top: 20px;
     font-size: 30px;
 }
 h2 {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     font-size: 20px;
 }
 .calculator {
