--- a/css/tablet.css
+++ b/css/tablet.css
@@ -2,6 +2,6 @@ main {
     width: 60%;
     text-align: center;
     margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
